--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.6.3",
     "@mui/utils": "^5.6.1",
     "next": "12.1.5",
+    "next-i18next": "^11.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
